--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Resizer</title>
+    <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <!-- Root element where the React app will be mounted -->
     <div id="root"></div>
   </body>
 </html>
